# system-mapper

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: START_HERE.md  autonomous-improvement-loop.md  competitive-learning-course.md  dead-code-self-assessment.md  dogfood-quality-history.jsonl  dogfood-run.md  interpreting-output.md  templates.md
skills/system-mapper/: SKILL.md
src/system_mapper/: __init__.py  adr.py  architecture_brief.py  claims.py  cli.py  clusters.py  eval.py  graph_formats.py  impact.py  inventory.py  map_query.py  merge.py  models.py  packet.py  planner.py  prompts.py  quality.py  report.py  runner.py  summarizer.py  update.py  worker.py
tests/: test_system_mapper.py
