[project]
name = "system-mapper"
version = "0.1.0"
description = "Divide-and-conquer reasoning system for helping weak or low-context LLMs understand large software systems."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Douglas" }]
dependencies = []

[project.scripts]
system-mapper = "system_mapper.cli:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
